# devdox-ai-git

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
src/devdox_ai_git/: git_managers.py  repo_fetcher.py
src/devdox_ai_git/exceptions/: base_exceptions.py  exception_constants.py
src/devdox_ai_git/schema/: repo.py
src/devdox_ai_git/test_doubles/: git_managers_doubles.py  repo_fetcher_doubles.py
src/devdox_ai_git/utils/: repository_url_parser.py
tests/src/devdox_ai_git/: test_git_managers.py  test_repo_fetcher.py
tests/src/devdox_ai_git/schema/: test_repo.py
tests/src/devdox_ai_git/test_doubles/: test_git_managers_doubles.py  test_repo_fetcher_doubles.py
tests/src/devdox_ai_git/utils/: test_repository_url_parser.py
