# ------------------------------
# Core build system
# ------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------
# Project metadata (PEP 621)
# ------------------------------
[project]
name = "devdox-ai-git"
version = "0.1.0"
description = "Devdox-ai-git is a reusable package that provides functionalities specific to git operations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

keywords = ["git", "github", "gitlab", "version control"]

authors = [
  { name = "Mohammad Ali Jaafar", email = "mohamadali.jaafar@montyholding.com" },
  { name = "Hayat Bourgi", email = "hayat.bourgi@montyholding.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# runtime dependencies
dependencies = [
  "requests==2.32.4",

  "pydantic==2.11.4",

  # Git and version control
  "python-gitlab==5.6.0",
  "GitPython==3.1.44",
  "PyGithub==2.6.1",

  # related to testing
  "coverage==7.10.6"
]

# optional extras
[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis",

  # # Formatting & linting
  "black>=24.0",
  "ruff>=0.3",

  # TOOLING
  "pre-commit",

  # Typing
  "mypy>=1.8",
  "types-requests" # Type stubs for the 'requests' library. Provides static typing info for Mypy/IDE checks, not imported at runtime. Safe to keep in dev only.
]

[project.urls]
Homepage = "https://github.com/montymobile1/devdox-ai-git"
Repository = "https://github.com/montymobile1/devdox-ai-git.git"
Documentation = "https://github.com/montymobile1/devdox-ai-git#readme"

# ------------------------------
# setuptools-specific options
# ------------------------------
[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]
include = ["devdox_ai_git*"]

# ------------------------------
# Development tools configuration
# ------------------------------

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I", "UP"] # lint, bugbear, imports, pyupgrade
ignore = ["E501"] # lets Black handle line length
exclude = ["build", "dist", "venv", ".venv"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]     # In test files, don’t enforce docstrings (D) and don’t warn about raw asserts (S101). Everywhere else, keep the rules strict.
"__init__.py" = ["F401"]      # basically tells ruff to ignore the case where it sees that you re-imported modules and stuff but never used them in __init__.py. That’s an F401: imported but unused

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=devdox_ai_git --cov-report=term-missing --cov-branch -ra"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

cache_dir = ".mypy_cache" # local cache folder that makes mypy even faster